--- a/app/src/main/res/layout/activity_session_detail.xml
+++ b/app/src/main/res/layout/activity_session_detail.xml
@@ -159,6 +159,20 @@
                         android:layout_marginTop="8dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+            <Button
+                android:id="@+id/generateMomButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Generate MoM"
+                android:layout_marginTop="16dp" />
+            <TextView
+                android:id="@+id/momText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Minutes of Meeting will appear here."
+                android:paddingTop="8dp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
         </LinearLayout>
     </ScrollView>
 
