--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="text_light">#ECECEC</color>
     <color name="tab_inactive">#0E1218</color>
     <color name="primary">#BDFF00</color>
+    <color name="pricing_bg">#0D0D0D</color> <!-- Page background -->
+    <color name="pricing_card_bg">#1A1A1A</color> <!-- Card background -->
+    <color name="pricing_text_primary">#FFFFFF</color>
+    <color name="pricing_text_secondary">#B3FFFFFF</color>
+    <color name="pricing_accent_yellow">#FFD700</color> <!-- Header text -->
+    <color name="pricing_neon_yellow">#D8F97C</color> <!-- Get Pro button -->
+    <color name="pricing_green">#00FF7F</color> <!-- Check marks -->
+    <color name="pricing_gray">#555555</color> <!-- Disabled feature -->
+
 </resources>
